# This file is part of the DiscoPoP software (http://www.discopop.tu-darmstadt.de)
#
# Copyright (c) 2020, Technische Universitaet Darmstadt, Germany
#
# This software may be modified and distributed under the terms of
# the 3-Clause BSD License.  See the LICENSE file in the package base
# directory for details.

[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "hatch_build"
backend-path = ["."]

[project]
name = "discopop-profiler"
version = "0.0.1"
description = "DiscoPoP profiler: LLVM instrumentation pass and runtime library"
license = {file = "../LICENSE"}

authors = [
    {name = "TU Darmstadt and Iowa State University", email = "discopop@lists.parallel.informatik.tu-darmstadt.de"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://www.discopop.tu-darmstadt.de/"

[project.scripts]
discopop_cc = "discopop_cc.__main__:main"
discopop_cxx = "discopop_cxx.__main__:main"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["discopop_cc", "discopop_cxx"]
# Pass optional build flags through via cmake.args, e.g.:
#   pip install . --config-settings="cmake.args=-DLLVM_DIST_PATH=/path/to/llvm"
